feat: content link not well displayed in news search result - MEED-9305 - Meeds-io/MIPs#193